--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <footer>
         <p class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Honorable GAKWAYA</a>.
+          Coded by <a href="https://github.com/HonorableGAKWAYA/ping-coming-soon-page-master.git" target="_blank">Honorable GAKWAYA</a>.
         </p>
       </footer>
     
